# VoxelEngine

./: .gitignore  CMakeLists.txt  main.cpp
src/: application.cpp  application.h  events.cpp  events.h  window.cpp  window.h
src/graphics/: camera.cpp  camera.h  image.cpp  image.h  shader.cpp  shader.h  texture.cpp  texture.h  textureatlas.cpp  textureatlas.h
src/graphics/mesh/: block.cpp  block.h  cube.cpp  cube.h  mesh.cpp  mesh.h
src/graphics/mesh/block/: block.cpp  block.h  blockface.cpp  blockface.h  blockfacetexcoords.cpp  blockfacetexcoords.h  blocktexcoords.cpp  blocktexcoords.h
src/graphics/mesh/world/: chunk.cpp  chunk.h  region.cpp  region.h  slice.cpp  slice.h
src/graphics/renderer/: chunkrenderer.cpp  chunkrenderer.h  framebuffer.cpp  framebuffer.h  meshrenderer.cpp  meshrenderer.h  regionrenderer.cpp  regionrenderer.h  renderer.cpp  renderer.h  vertexarraybuffer.cpp  vertexarraybuffer.h  vertexattributeobject.cpp  vertexattributeobject.h
src/vectormath/: mat4.cpp  mat4.h  perlinnoise.cpp  perlinnoise.h  vec3.cpp  vec3.h  vec3uint.cpp  vec3uint.h
